sort.basic.bubble.AlgBubbleSort1.scala.error
Compilation error:
AlgBubbleSort1:8: error: type mismatch;
 found   : Unit
 required: Boolean
  while (echange=true) && i<x{
                ^AlgBubbleSort1:8: error: not found: value &&
  while (echange=true) && i<x{
                       ^AlgBubbleSort1:8: error: not found: value <
  while (echange=true) && i<x{
                           ^